syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package ads;

message AdsSample {
  uint32 leadOffPositive = 1;
  uint32 leadOffNegative = 2;
  uint32 gpio = 3;
  repeated sint32 data = 4;
  optional float accel_x = 5;
  optional float accel_y = 6;
  optional float accel_z = 7;
  optional float gyro_x = 8;
  optional float gyro_y = 9;
  optional float gyro_z = 10;
}

message AdsDataFrame {
  uint64 ts = 1;
  uint64 packetCounter = 2;
  repeated AdsSample samples = 3;
}
